--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "api-first-spec": "^0.1.7",
     "chai": "^2.2.0",
     "moment": "^2.9.0",
-    "mysql": "^2.6.1"
+    "mysql": "^2.6.1",
+    "express": "4.x",
+    "body-parser": "*",
+    "jsonwebtoken": "4.2.2"
   }
 }
