Experimenting with Promises -Error handling is more consistent -Callback nesting is reduced -The code is typically more concise as error handling is standardized and consolidated to one location -Promises are more flexible when chaining calls together and aggregating results from multiple asynchronous calls

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql": "^2.6.1",
     "express": "4.x",
     "body-parser": "*",
-    "jsonwebtoken": "4.2.2"
+    "jsonwebtoken": "4.2.2",
+    "bluebird": "*"
   }
 }
